--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,8 @@ body {
 
 .app-container {
     width: 100%;
-    max-width: 400px;
+    max-width: 1500px;
+    min-height: 100vh;
     margin: auto;
     background: white;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -36,8 +37,6 @@ header {
     margin-right: 10px;
 }
 
-
-
 .tabs {
     display: flex;
     justify-content: space-around;
@@ -60,25 +59,37 @@ header {
 
 .clothes-section {
     padding: 15px;
-}
-
-.clothes-category h3 {
-    display: flex;
-    justify-content: space-between;
+    max-height: 400px; /* Adjust based on item size */
+    overflow-y: auto;  /* Enable scrolling */
 }
 
 .clothes-grid {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr); /* Keep 2 columns */
     gap: 10px;
     margin-top: 10px;
+    text-align: left;
 }
+
+.clothes-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 
 .clothes-item {
     width: 100%;
-    height: 80px;
+    height: 150px; 
     background: #ddd;
     border-radius: 5px;
+}
+
+.clothes-box p {
+    margin-top: 5px;
+    font-size: 14px;
+    font-weight: bold;
+    color: black;
 }
 
 footer {
