--- a/styles.css
+++ b/styles.css
@@ -117,3 +117,81 @@ footer {
     font-size: 20px;
     cursor: pointer;
 }
+
+/* ALL CLOTHES PAGE */
+.all-clothes-container {
+    max-width: 500px;
+    margin: auto;
+    padding: 20px;
+    background: white;
+}
+
+.header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between; 
+    margin-bottom: 15px;
+}
+
+
+.back-button {
+    background: #ddd;
+    border: none;
+    padding: 10px 15px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.back-button:hover {
+    background: #bbb;
+}
+
+.header h1 {
+    flex-grow: 1; 
+    text-align: center;
+    margin-right: 40px; 
+
+}
+
+.allclothes-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); 
+    gap: 10px;
+}
+
+.item {
+    width: 100%;
+    height: 200px; 
+    background: #ddd;
+    border-radius: 5px;
+}
+
+/* SHIRTS PAGE */
+.shirts-container {
+    max-width: 500px;
+    margin: auto;
+    padding: 20px;
+    background: white;
+}
+
+.shirts-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); 
+    gap: 10px;
+}
+
+/* PANTS PAGE */
+
+.pants-container {
+    max-width: 500px;
+    margin: auto;
+    padding: 20px;
+    background: white;
+}
+
+.pants-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); 
+    gap: 10px;
+}
