--- a/styles.css
+++ b/styles.css
@@ -107,7 +107,7 @@ footer {
     border-top: 1px solid #ddd;
 }
 
-.add-button {
+.plus-button {
     width: 40px;
     height: 40px;
     border-radius: 50%;
